--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -31,10 +31,10 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
@@ -86,10 +86,10 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
@@ -102,9 +102,9 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
         <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
         <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
+        <td></td>
     </tr>
     <tr>
         <td>3</td>
@@ -141,25 +141,25 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
         <td>1</td>
         <td>08:30-09:50</td>
-        <td></td>
         <td>Бази даних_ (практична)_ Міронов Юрій Глібович</td>
         <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
+        <td></td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td>21.05 під питанням</td>
         <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
         <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
+        <td>21.05 під питанням</td>
     </tr>
     <tr>
         <td>3</td>
@@ -197,10 +197,10 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
@@ -213,23 +213,23 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
         <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
         <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+        <td></td>
     </tr>
     <tr>
         <td>3</td>
         <td>11:40-13:00</td>
-        <td>відм. відв.</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+        <td>відм. відв.</td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
-        <td>відм. відв.</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
+        <td>відм. відв.</td>
     </tr>
     <tr>
         <td>5</td>
@@ -248,9 +248,9 @@
     <tr>
         <td>7</td>
         <td>17:40-19:00</td>
-        <td>відм. відв.</td>
         <td>Іноземна мова за професійним спрямуванням_ Домніч Л.М.</td>
         <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
+        <td>відм. відв.</td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -259,10 +259,10 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
@@ -275,9 +275,9 @@
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
-        <td></td>
         <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
         <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
+        <td></td>
     </tr>
     <tr>
         <td>3</td>
@@ -314,10 +314,10 @@
     <thead>
     <tr>
         <th>№</th>
-        <th>Час</th>
-        <th>Групи</th>
-        <th>Дисципліна</th>
-        <th>Zoom</th>
+            <th>Час</th>
+            <th>Дисципліна</th>
+            <th>Zoom</th>
+            <th>Опис</th>
     </tr>
     </thead>
     <tr>
