--- a/perekladachkayellow.html
+++ b/perekladachkayellow.html
@@ -104,7 +104,7 @@
         <td>10:00-11:20</td>
         <td>Архітектура та проєктування програмного забезпечення_ (лекція)_ Талалаєв Володимир Опанасович</td>
         <td><a href="https://us05web.zoom.us/j/6946850059?pwd=VWhOaGd5RVErNHBNNEI5RGVybVpBQT09" target="_blank">Натисніть</a> Код доступа: RB7NaD</td>
-        <td></td>
+        <td>Очікує оцінка за семестр або після результату іспиту</td>
     </tr>
     <tr>
         <td>3</td>
@@ -152,14 +152,14 @@
         <td>08:30-09:50</td>
         <td>Бази даних_ (практична)_ Міронов Юрій Глібович</td>
         <td><a href="https://us04web.zoom.us/j/6635209883?pwd=K0NCS0hrZnI4d3U1RExUWlVTbVNQQT09" target="_blank">Натисніть</a></td>
-        <td></td>
+        <td>МКР - 21.05(ймовірно). Іспит (після 02.06)</td>
     </tr>
     <tr>
         <td>2</td>
         <td>10:00-11:20</td>
         <td>Дослідження операцій_ (практична)_ Мельник Олександр Вікторович</td>
         <td><a href="https://us04web.zoom.us/j/6224901769?pwd=TUtzc0taaU1HNzBxZ21pbUI2L2NSUT09" target="_blank">Натисніть</a></td>
-        <td>21.05 під питанням</td>
+        <td>Всі завдання були здані та оцінені, навіть заліковий тест. Очікує оцінка за семестр</td>
     </tr>
     <tr>
         <td>3</td>
@@ -215,21 +215,21 @@
         <td>10:00-11:20</td>
         <td>Основи кіберфізичних систем_ (лекція)_ Молчанов Андрій Сергійович</td>
         <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
-        <td></td>
+        <td>НЕ ЙДЕМО НІКОЛИ.</td>
     </tr>
     <tr>
         <td>3</td>
         <td>11:40-13:00</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
-        <td>відм. відв.</td>
+        <td>Для відмічання відвідування. Всі лабораторні були здані та оцінені</td>
     </tr>
     <tr>
         <td>4</td>
         <td>13:10-14:30</td>
         <td>Програмування мікроконтролерів_ (практична)_ Самарай Валерій Петрович</td>
         <td><a href="https://us04web.zoom.us/j/6758492120?pwd=QVlYdDhBb0hpRFU3TGNMdzJPbysyUT09" target="_blank">Натисніть</a></td>
-        <td>відм. відв.</td>
+        <td>Для відмічання відвідування. Всі лабораторні були здані та оцінені</td>
     </tr>
     <tr>
         <td>5</td>
@@ -250,7 +250,7 @@
         <td>17:40-19:00</td>
         <td>Іноземна мова за професійним спрямуванням_ Домніч Л.М.</td>
         <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1" target="_blank">Натисніть</a></td>
-        <td>відм. відв.</td>
+        <td>Для відмічання відвідування та очікує оцінка за семестр</td>
     </tr>
 </table>
 <!-------------------------------------->
@@ -277,7 +277,7 @@
         <td>10:00-11:20</td>
         <td>Основи кіберфізичних систем_ (практична)_ Молчанов Андрій Сергійович</td>
         <td><a href="https://zoom.us/j/4415014552?pwd=GXzzLqgfQB2DbvBNtqj5kH3YibkjLm.1&omn=91342973471" target="_blank">Натисніть</a></td>
-        <td></td>
+        <td>Всі лабораторні були здані та оцінені</td>
     </tr>
     <tr>
         <td>3</td>
